<resources>
    <string name="app_name">Valetudo Companion</string>
    <string name="discovering_valetudo_instances">Discovering Valetudo instances on your network…</string>
    <string name="found_devices">Found devices (tap to open)</string>
    <string name="provision_new">Provision new Valetudo Instance</string>
    <string name="discovered_valetudo_instance_list_item_manufacturer_and_model" translatable="false">%s %s</string>
    <string name="discovered_valetudo_instance_list_item_name" translatable="false">%s</string>
    <string name="discovered_valetudo_instance_list_item_valetudo_version" translatable="false">Valetudo %s</string>
    <string name="discovered_valetudo_instance_list_item_domain_and_host" translatable="false">valetudo_%s.local (%s)</string>
    <string name="valetudo_logo_content_description">Valetudo Logo</string>

    <string name="help_button_title">Help</string>
    <string name="dialog_action_ok">OK</string>
    <string name="help_dialog_title">How do I use this app?</string>

    <string name="help_dialog_content">
        This app discovers Valetudo instances on your network via mDNS/Bonjour.
        \n
        \nYou can open the webinterface of a discovered robot by tapping on its list entry.
        Additionally, you can also long-press the entry to instead open the webinterface in a new tab of your browser.

        \n
        \nApart from discovering existing Valetudo instances on your network, the app can also help you
        connect new ones to it. Simply tap the add button at the bottom and follow the instructions.
    </string>

    <string name="discovering_help">
        Troubleshooting:
        \n
        \n- Are you connected to your Wi-Fi?
        \n- Is the robot turned on?
        \n- Have you tried rebooting the robot?
        \n- Are you running Valetudo 2021.07.0 or newer?
        \n- Are you connected to the same network as the robot?
        \n- Are you connected to a VPN?
        \n- Does your network setup block/filter mDNS/Bonjour?
    </string>

    <string name="provisioning_help">
        You need to manually connect your phone to the Wi-Fi Access Point of your robot for the scan button to work.
    </string>
    <string name="provisioning_initial">-</string>
    <string name="provisioning_no_valetudo">No Valetudo found</string>
    <string name="provisioning_found_valetudo" translatable="false">%s %s</string>
    <string name="provisioning_found_hint">Found unprovisioned robot:</string>
    <string name="connect">Connect</string>
    <string name="password">Password</string>
    <string name="ssid">SSID</string>
    <string name="scan">Scan for Valetudo</string>
    <string name="wizard_page_1_hint_1">This Wizard will help you join a Valetudo-enabled Robot to your Wi-Fi network.\n\nPlease note that this will _not_ install Valetudo.\nYou will need a robot that already has Valetudo installed for this to do anything useful.</string>
    <string name="wizard_page_1_next_button">Use the App</string>
    <string name="wizard_page_1_wizard_button_permission">Grant location access</string>
    <string name="wizard_page_1_skip_button">I\'m already connected</string>
    <string name="wizard_page_1_hint_2">You can either use the App to connect to the Robots Wi-Fi Access Point or skip the procedure and use your phones system settings to connect.\n\nNote that using the App to connect to the AP requires the location permission, because Android doesn\'t allow access to Wifi Network scanning without it.</string>
    <string name="wizard_page_2_hint">Please select a network</string>
    <string name="wizard_page_2_scan_button">Scan</string>
    <string name="no_ssids_found_hint">No SSIDs matching known robot APs found.\nTry pressing scan to refresh</string>
    <string name="no_valetudo_found_hint">No Valetudo found on this Network.\nTry pressing scan to refresh</string>
</resources>
